[gd_scene load_steps=5 format=3 uid="uid://wfo1d6igdbq8"]

[ext_resource type="PackedScene" uid="uid://ese6vksrw6aa" path="res://assets/Beagle.glb" id="1_ex5y0"]
[ext_resource type="Script" path="res://scripts/dog.gd" id="1_umy2i"]
[ext_resource type="PackedScene" uid="uid://2caldxyonvdc" path="res://objects/label_3d_score.tscn" id="2_crqb4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_eyemw"]
size = Vector3(0.692383, 1.48364, 1.94507)

[node name="Beagle" type="CharacterBody3D"]
script = ExtResource("1_umy2i")
score = ExtResource("2_crqb4")

[node name="Beagle" parent="." instance=ExtResource("1_ex5y0")]
transform = Transform3D(0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0.83814, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.802862, -0.0296631)
shape = SubResource("BoxShape3D_eyemw")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.791493, 0)
shape = SubResource("BoxShape3D_eyemw")

[node name="Timer_feed_despawn" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[node name="Movement" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="spawn_score" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer_feed_despawn" to="." method="_on_timer_feed_despawn_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="timeout" from="Movement" to="." method="stop_movement"]
